- shadow influence spreads to same faction planets  - corruption is based on factions and not clans (top 2 faction ratio)  - planet ownership based on factions first, then clans, then people - biggest clans in same factions are considered together first  - owner win  influence malus based on faction ratio and appplied to whole faction  - influence decay 3 per faction per turn instead per clan per turn  - ships not destroyed if player not playing  - influence lists, planet tooltip and planetwars structure tooltip ingame updated to reflect factions  - faulty css wrap entry fixed  - all planetary defenses destroyed in cosmic accident
svn path=/trunk/other/; revision=3738

--- a/Zero-K.info/Styles/style.css
+++ b/Zero-K.info/Styles/style.css
@@ -470,7 +470,7 @@ div#ajaxScrollProgress
   border: 1px solid teal;
   max-width: 700px;
   overflow: hidden;
-  white-space: wrap;
+  white-space:normal;
 }
 
 
